[package]
name = "import_gitlab_commits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
git2 = "0.18.3"
chrono = "0.4.19"
